Turn AWS image mapping file into a common, parametrized template

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ terraform:
   rules:
     - changes:
         - secrets/credentials.yml
+        - terraform/environments/common/**/*
         - terraform/environments/dev/**/*
         - terraform/modules/**/*
         - terraform/*.tf
