--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ jinja2 = "^2.11.2"
 ansible-vault = "^1.2.0"
 cryptography = "^2.9.2"
 yq = "^2.10.0"
+boto3 = "^1.13.6"
 
 [tool.poetry.dev-dependencies]
 
