--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-epel.yml
@@ -7,6 +7,10 @@
     - 'ansible_distribution == "CentOS"'
     - "not IMAGE_NAME|lower|regex_search('centos.stream.9')"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+  retries: "{{ pkg_retry_count }}"
+  delay: "{{ pkg_retry_delay }}"
+  until: result_package is succeeded
+  register: result_package
 
 - name: Install EPEL on CentOS (CentOS Stream 9)
   package:
@@ -16,3 +20,7 @@
     state: present
   when:
     - "IMAGE_NAME|lower|regex_search('centos.stream.9')"
+  retries: "{{ pkg_retry_count }}"
+  delay: "{{ pkg_retry_delay }}"
+  until: result_package is succeeded
+  register: result_package
