--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yml
@@ -1,6 +1,10 @@
 - block:
   - name: Make sure dnf core plugins are installed
     command: "dnf -y install dnf-plugins-core"
+    retries: "{{ pkg_retry_count }}"
+    delay: "{{ pkg_retry_delay }}"
+    until: result_package is succeeded
+    register: result_package
 
   - name: Enable Buildroot repository
     command: "dnf config-manager --enable rhel-buildroot"
