--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-beakerlib.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-beakerlib.yml
@@ -3,6 +3,10 @@
 - block:
   - name: Make sure dnf core plugins are installed
     command: "dnf -y install dnf-plugins-core"
+    retries: "{{ pkg_retry_count }}"
+    delay: "{{ pkg_retry_delay }}"
+    until: result_package is succeeded
+    register: result_package
 
   - name: Add beakerlib copr repository for CentOS Stream
     command: "dnf -y copr enable packit/beakerlib-beakerlib-master"
@@ -10,5 +14,9 @@
   # workaround TFT-1284
   - name: Install beakerlib
     command: "dnf -y install beakerlib"
+    retries: "{{ pkg_retry_count }}"
+    delay: "{{ pkg_retry_delay }}"
+    until: result_package is succeeded
+    register: result_package
 
   when: "IMAGE_NAME|lower|regex_search('centos.stream')"
