--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -4,6 +4,10 @@
       - koji
     state: present
   when: 'ansible_distribution == "Fedora"'
+  retries: "{{ pkg_retry_count }}"
+  delay: "{{ pkg_retry_delay }}"
+  until: result_package is succeeded
+  register: result_package
 
 - block:
     - name: Add RCM Repository for RHEL7 and earlier
@@ -17,6 +21,10 @@
     - name: Install Brewkoji
       package:
         name: brewkoji
+      retries: "{{ pkg_retry_count }}"
+      delay: "{{ pkg_retry_delay }}"
+      until: result_package is succeeded
+      register: result_package
 
   when:
     - 'ansible_distribution == "RedHat" or
@@ -37,6 +45,10 @@
     - name: Install Brewkoji
       package:
         name: brewkoji
+      retries: "{{ pkg_retry_count }}"
+      delay: "{{ pkg_retry_delay }}"
+      until: result_package is succeeded
+      register: result_package
 
   when:
     - 'ansible_distribution == "RedHat" or
@@ -48,6 +60,10 @@
 - block:
     - name: Install brewkoji from Fedora 33 for RHEL9 (workaround)
       command: "dnf -y install --nogpgcheck https://kojipkgs.fedoraproject.org//packages/koji/1.23.0/2.fc33/noarch/koji-1.23.0-2.fc33.noarch.rpm https://kojipkgs.fedoraproject.org//packages/koji/1.23.0/2.fc33/noarch/python3-koji-1.23.0-2.fc33.noarch.rpm http://download.devel.redhat.com/rel-eng/RCMTOOLS/RCMTOOLS-2.0-updates-F-33-20210105.0/compose/Everything/x86_64/os/Packages/brewkoji-1.26-1.fc33eng.noarch.rpm http://download.devel.redhat.com/rel-eng/RCMTOOLS/RCMTOOLS-2.0-updates-F-33-20210105.0/compose/Everything/x86_64/os/Packages/python3-brewkoji-1.26-1.fc33eng.noarch.rpm http://download.eng.bos.redhat.com/brewroot/vol/rhel-9/packages/pyOpenSSL/20.0.1/2.el9/noarch/python3-pyOpenSSL-20.0.1-2.el9.noarch.rpm"
+      retries: "{{ pkg_retry_count }}"
+      delay: "{{ pkg_retry_delay }}"
+      until: result_package is succeeded
+      register: result_package
 
   when:
     - 'ansible_distribution == "RedHat"'
