--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yml
@@ -80,6 +80,11 @@
           package:
             name: yum-plugin-priorities
             state: present
+          retries: "{{ pkg_retry_count }}"
+          delay: "{{ pkg_retry_delay }}"
+          until: result_package is succeeded
+          register: result_package
+
           when:
             - ansible_distribution == "RedHat"
             - ansible_distribution_major_version|int < 8
