--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,9 +53,9 @@ terraform:
   script:
     # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
     - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
-    - cd terraform
+    - cd terraform/environments/dev
     - terraform init
-    - terraform plan -var-file=environments/dev/dev.tfvars -out tfplan
+    - terraform plan -out tfplan
     - terraform apply tfplan
     - context=$(aws eks --region us-east-2 update-kubeconfig --name $TF_VAR_cluster_name | grep -o "arn[^ ]*")
     - kubectl ctx $context
@@ -67,9 +67,9 @@ terraform:
   after_script:
     - eval "$(direnv export bash)"
     - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
-    - cd terraform
+    - cd terraform/environments/dev
     # NOTE: return code can be non-zero in case of warnings
-    - terraform destroy -var-file=environments/dev/dev.tfvars -auto-approve
+    - terraform destroy -auto-approve
   rules:
     - changes:
         - secrets/credentials.yml
