public/guest-setup: CentOS now uses 'centos' user
Supplies!

https://www.youtube.com/watch?v=RB2GboGOuTI

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/playbooks/cloud_image_login.yaml
+++ b/ranch/public/citool-config/playbooks/cloud_image_login.yaml
@@ -7,20 +7,12 @@
     when: "'fedora' in IMAGE_NAME|lower and 'coreos' not in IMAGE_NAME|lower"
 
 - hosts: all
-  remote_user: ec2-user
-  gather_facts: false
-  tasks:
-  - name: Make sure root can login on CentOS Stream 9
-    shell: "sudo sed -i 's/.*ssh-rsa/ssh-rsa/' /root/.ssh/authorized_keys"
-    when: "IMAGE_NAME|lower|regex_search('centos.stream.9')"
-
-- hosts: all
   remote_user: centos
   gather_facts: false
   tasks:
   - name: Make sure root can login on CentOS
     shell: "sudo sed -i 's/.*ssh-rsa/ssh-rsa/' /root/.ssh/authorized_keys"
-    when: "'centos' in IMAGE_NAME|lower and not IMAGE_NAME|lower|regex_search('centos.stream.9')"
+    when: "'centos' in IMAGE_NAME|lower"
 
 - hosts: all
   remote_user: core
