--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ---
 default:
-  image: quay.io/testing-farm/python-ci-image
+  image: quay.io/testing-farm/python-ci-image:2022-09-22-f36b4b1c
 
 variables:
   # GitLab CI runs in world writable directory, we need to explicitely set ANSIBLE_CONFIG
