Add API token for terraform cloud

--- a/.envrc
+++ b/.envrc
@@ -74,6 +74,7 @@ export KUBECONFIG="$DIRENV_PATH/.kube/config"
 #
 # terraform
 #
+export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.terraform.cloud.testing_farm_bot.token)"
 export TF_VAR_cluster_name="testing-farm-dev-$USER"
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
 export TF_VAR_ansible_vault_credentials="credentials.yml"
