--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ yq = "^2.10.0"
 boto3 = "^1.13.6"
 
 [tool.poetry.dev-dependencies]
+yamllint = "^1.28.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
