Drop obsolete xunit-viewer
This got replaced with https://gitlab.com/testing-farm/oculus a while
ago.

Rename xunit-viewer.yml tasks file to xunit-converter.yml, as it now
only handles installation of tfxunit2junit.py (which is not related to
oculus at all).

--- a/ansible/playbooks/create-public-worker.yml
+++ b/ansible/playbooks/create-public-worker.yml
@@ -77,7 +77,7 @@
     - include: ../tasks/podman.yml
     - include: ../tasks/jobs.yml
     - include: ../tasks/config.yml
-    - include: ../tasks/xunit-viewer.yml
+    - include: ../tasks/xunit-converter.yml
     - include: ../tasks/image.yml
     - name: "Manual action required to update Artemis loabalancer - kubectl edit svc/artemis-api and worker security group"
       pause:
