--- a/.envrc
+++ b/.envrc
@@ -77,7 +77,7 @@ PATH_add "$DIRENV_PATH/.krew/bin"
 # terraform
 #
 export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.terraform.cloud.testing_farm_bot.token)"
-export TF_VAR_cluster_name="testing-farm-dev-$USER"
+export TF_VAR_cluster_name="${TF_VAR_cluster_name:-testing-farm-dev-$USER}"
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
 export TF_VAR_ansible_vault_credentials="credentials.yml"
 export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
