--- a/terraform/environments/staging/config/variables_images.yml
+++ b/terraform/environments/staging/config/variables_images.yml
@@ -14,18 +14,26 @@ composes:
     compose: 'Fedora-35'
 
     x86_64:
-      image: 'Fedora-Cloud-Base-35-20220719.0.x86_64-hvm-us-east-2-gp2-0'
+      image: 'Fedora-Cloud-Base-35-20221117.0.x86_64-hvm-us-east-2-gp2-0'
     aarch64:
-      image: 'Fedora-Cloud-Base-35-20220718.0.aarch64-hvm-us-east-2-gp2-0'
+      image: 'Fedora-Cloud-Base-35-20221117.0.aarch64-hvm-us-east-2-gp2-0'
 
   # aws --profile fedora_us_east_2 ec2 describe-images --filter Name=name,Values=Fedora-Cloud-Base-36* | jq '.Images | .[] | .Name' | sort
-  fedora_36: &fedora_latest_ref
+  fedora_36:
     compose: 'Fedora-36'
 
     x86_64:
-      image: 'Fedora-Cloud-Base-36-1.5.x86_64-hvm-us-east-2-gp2-0'
+      image: 'Fedora-Cloud-Base-36-20221117.0.x86_64-hvm-us-east-2-gp2-0'
     aarch64:
-      image: 'Fedora-Cloud-Base-36-1.5.aarch64-hvm-us-east-2-gp2-0'
+      image: 'Fedora-Cloud-Base-36-20221117.0.aarch64-hvm-us-east-2-gp2-0'
+
+  fedora_37: &fedora_latest_ref
+    compose: 'Fedora-37'
+
+    x86_64:
+      image: 'Fedora-Cloud-Base-37-20221116.0.x86_64-hvm-us-east-2-gp2-0'
+    aarch64:
+      image: 'Fedora-Cloud-Base-37-20221116.0.aarch64-hvm-us-east-2-gp2-0'
 
   # TFT-1221
   fedora_latest: *fedora_latest_ref
@@ -35,9 +43,9 @@ composes:
     compose: 'Fedora-Rawhide'
 
     x86_64:
-      image: 'Fedora-Cloud-Base-Rawhide-20220717.n.0.x86_64-hvm-us-east-2-gp2-0'
+      image: 'Fedora-Cloud-Base-Rawhide-20221115.n.0.x86_64-hvm-us-east-2-gp2-0'
     aarch64:
-      image: 'Fedora-Cloud-Base-Rawhide-20220717.n.0.aarch64-hvm-us-east-2-gp2-0'
+      image: 'Fedora-Cloud-Base-Rawhide-20221115.n.0.aarch64-hvm-us-east-2-gp2-0'
 
   centos_6:
     compose: 'CentOS-6'
@@ -73,6 +81,6 @@ composes:
     compose: 'CentOS-Stream-9'
 
     x86_64:
-      image: 'CentOS Stream 9 x86_64 20220606'
+      image: 'CentOS Stream 9 x86_64 20220919'
     aarch64:
-      image: 'CentOS Stream 9 aarch64 20220606'
+      image: 'CentOS Stream 9 aarch64 20220919'
