ansible/playbooks/create-redhat-worker: use correct VPC
As it turns out, the new VPC has correctly set DNS options
so it uses non-AWS provided DNS.

That it turns out, is a lot more stable.

This caused us a larger outage in the time of doing this change.

See TFT-1755

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/playbooks/create-redhat-worker.yml
+++ b/ansible/playbooks/create-redhat-worker.yml
@@ -23,8 +23,9 @@
         network:
           assign_public_ip: false
         instance_initiated_shutdown_behavior: terminate
-        security_group: sg-0a27e72b0135ea078
-        vpc_subnet_id: subnet-0b853a752f0f7eba5
+        # TFT-1755 - use ARR-TestingFarm-US-East-1, which has correctly setup DNS
+        security_group: sg-0cb20f3b88c57fa30
+        vpc_subnet_id: subnet-036ad213c3fb0eb7e
       register: ec2
 
     - name: Add new instance to host group
