--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/update-and-restart.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/update-and-restart.yml
@@ -24,6 +24,7 @@
       when: "'kernel-' in update_packages.stdout"
 
   # 2022-05-24: Added CentOS Stream 8 update, due to podman broken with old libseccomp
-  when: check_rawhide.rc == 0 or IMAGE_NAME|lower|regex_search('centos.stream.8')
+  # 2022-12-01: Added CentOS Stream 9 update, due to podman broken with libselinux
+  when: check_rawhide.rc == 0 or IMAGE_NAME|lower|regex_search('centos.stream')
   # This task is best effort
   ignore_errors: true
