--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yml
@@ -54,4 +54,5 @@
     - 'ansible_distribution == "RedHat" or
        ansible_distribution == "CentOS" or
        ansible_distribution == "OracleLinux"'
+    - 'ansible_distribution_major_version >= "8"'
     - 'not IMAGE_NAME|lower|regex_search("^auto-")'
