direnv: add krew root and path
This is needed for the krew plugins to become available.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -70,6 +70,8 @@ export AWS_DEFAULT_REGION="us-east-1"
 # kubectl
 #
 export KUBECONFIG="$DIRENV_PATH/.kube/config"
+export KREW_ROOT="$DIRENV_PATH/.krew/"
+PATH_add "$DIRENV_PATH/.krew/bin"
 
 #
 # terraform
