dev: add localhost public IP to Artemis
For testing purposes it can be very handy to be able to
connect to Artemis from localhost. For that we need
to update the list of whitelisted IPs.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ terraform:
   stage: 🔍
   script:
     # TODO: tmt run -e cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME plan --name /terraform/environments/dev
-    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
+    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-${CI_COMMIT_REF_NAME:0:10}-$CI_JOB_ID
     - cd terraform/environments/dev
     - terraform init
     - terraform plan -out tfplan
@@ -66,7 +66,7 @@ terraform:
     - kubectl delete pod/fedora
   after_script:
     - eval "$(direnv export bash)"
-    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-$CI_COMMIT_REF_NAME-$CI_JOB_ID
+    - export TF_VAR_cluster_name=testing-farm-gitlab-ci-${CI_COMMIT_REF_NAME:0:10}-$CI_JOB_ID
     - cd terraform/environments/dev
     # NOTE: return code can be non-zero in case of warnings
     - terraform destroy -auto-approve
