Move to yaml extension
This is what we agreed with the team, rather do it now then later ...

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -62,8 +62,8 @@ PATH_add "$TOOLS_PATH"
 #
 # download and setup kubectl
 #
-export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
-export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
+export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.aws.fedora.access_key)"
+export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.aws.fedora.secret_key)"
 export AWS_DEFAULT_REGION="us-east-1"
 
 #
@@ -76,13 +76,13 @@ PATH_add "$DIRENV_PATH/.krew/bin"
 #
 # terraform
 #
-export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.terraform.cloud.testing_farm_bot.token)"
+export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.terraform.cloud.testing_farm_bot.token)"
 export TF_VAR_cluster_name="testing-farm-dev-$USER"
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
-export TF_VAR_ansible_vault_credentials="credentials.yml"
+export TF_VAR_ansible_vault_credentials="credentials.yaml"
 export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
 
 #
 # gitlab-ci-linter
 #
-export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.gitlab.testing_farm_bot.token)"
+export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.gitlab.testing_farm_bot.token)"
